[build-system]
requires = ["setuptools >= 77.0.3", "numpy>=1.25.0"]
build-backend = "setuptools.build_meta"
[project]
name = "example_package_jcoldenhoff"
version = "0.0.1"
authors = [
  { name="Jozef Coldenhoff", email="jozefcoldenhoff@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"